Test unitaire controller commencé Rajout exception pour la fonction showpatient dans patient controller